Changes with tdc 1.6                                                06 Oct 2016

  * Re-release of broken 1.5 release.
  * Fixed a potential buffer overflow vulnerability.
  * Updated documentation.

Changes with tdc 1.4                                                12 Jul 2016

  * Relocated home of source code.
  * Updated documentation.

Changes with tdc 1.3                                                21 Apr 2014

  * Added window title.
  * Added support for other build flags.
  * Now compiles with -Wall -Wextra -pedantic flags.
  * No more segfaults.
  * Now handles long arguments properly.
  * Current day in calendar displays correctly.
  * Makefile cleaned up.

Changes with tdc 1.2                                                05 Mar 2011

  * Fixed PREFIX in Makefile.
  * First version ready for distribution.

Changes with tdc 1.1                                                03 Mar 2011

  * Added CHANGES file.
  * Minor bug fixes to source and manual page.

Changes with tdc 1.0                                                01 Mar 2011

  * The first public version.