@@ -2,9 +2,9 @@
 .\"    Author: Michael Lustfield <michael@lustfield.net>
 .\"      Date: 10/06/2014
 .\"    Manual: User Commands
-.\"    Source: tdc 1.6
+.\"    Source: tdc 1.7
 .\"
-.TH "TDC" "1" "10/06/2014" "tdc 1\.6" "User Commands"
+.TH "TDC" "1" "10/06/2014" "tdc 1\.7" "User Commands"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
