@@ -1,3 +1,9 @@
+Changes with tdc 1.7                                                21 Oct 2019
+
+  * Replace 'cal' with 'ncal' (Fixes: #2)
+  * Add checks to ensure ncal is available to be executed
+  * Fix a past mistake with copyright holders
+
 Changes with tdc 1.6                                                06 Oct 2016
 
   * Re-release of broken 1.5 release.
